--- a/index.html
+++ b/index.html
@@ -82,8 +82,11 @@
 
                 <div id="cookies">
                     <img src="assets/cookie.png" alt="Image of cookie">
-                    <span><h3>Stop! Cookie time</h3>
-                    <p>We use cookies (sadly not the edible ones) to personalize content and ads, to provide social media features and to analyse our traffic. <a href="#">Read more...</a></p></span>
+                    <div>
+                        <h3>Stop! Cookie time</h3>
+                        <p>We use cookies (sadly not the edible ones) to personalize content and ads, to provide social media features and to analyse our traffic. <a href="#">Read more...</a>
+                        </p>
+                    </div>
                     <button onclick="accept()">I Accept</button>
                 </div>
 
@@ -92,6 +95,6 @@
 
         <span class="side"></span>
     </main>
+    <script src="scripts.js"></script>
 </body>
-<script src="scripts.js"></script>
 </html>
